Remove conf files

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+.idea/
+.settings/
+build/
+
 ### JDeveloper template
 # default application storage directory used by the IDE Performance Cache feature
 .data/
