--- a/pom.xml
+++ b/pom.xml
@@ -151,6 +151,11 @@
 			<artifactId>jstl</artifactId>
 			<version>1.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator-annotation-processor</artifactId>
+			<version>4.1.0.Final</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
