--- a/pom.xml
+++ b/pom.xml
@@ -156,6 +156,11 @@
 			<artifactId>hibernate-validator-annotation-processor</artifactId>
 			<version>4.1.0.Final</version>
 		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-c3p0</artifactId>
+			<version>5.1.0.Final</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
